# inferred

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  praca.docx  praca.md  pyproject.toml  tasks.py  ty.py
backend/: .env.example  Dockerfile  flush.sh  manage.py  pyproject.toml
backend/inferred/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/inferred/core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/inferred/sensors/: admin.py  apps.py  consumers.py  granulation.py  models.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/inferred/sensors/fixtures/: initial_data.json
backend/inferred/sensors/management/commands/: capture_sensor_data.py
backend/inferred/sensors/migrations/: 0001_initial.py  0002_alter_prediction_read.py  0002_tick_sensors_tic_timesta_5f4e2e_idx.py  0003_prediction_sensors_pre_simulat_25bf61_idx_and_more.py  0003_remove_prediction_interval_simulationmodel_interval.py  0004_remove_prediction_unique_simulation_prediction_and_more.py  0005_alter_prediction_read.py  0006_alter_predictionread_prediction.py  0007_rename_dimension_sensor.py  0008_alter_sensorread_options_and_more.py
backend/sensors/: admin.py  consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
backend/sensors/management/commands/: capture_sensor_data.py
backend/sensors/migrations/: 0001_initial.py  0002_alter_prediction_options_alter_tick_options_and_more.py
diagrams/: diagram.ipynb
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1695795728883-9f9d0f2bed50f.mjs
frontend/src/: About.jsx  App.jsx  CommonChart.jsx  Dashboard.jsx  Graph.jsx  Utils.jsx  constants.jsx  index.css  main.jsx  themes.jsx
frontend/src/comparison/: ComparisonMenu.jsx  ComparisonSelection.jsx  DurationPicker.jsx  HorizonSlider.jsx  Metrics.jsx  ModelChips.jsx  ModelComparison.jsx  ModelComparisonCharts.jsx  ModelComparisonView.jsx  ModelSelection.jsx  ScalarMetricsRadarChart.jsx  ScalarMetricsTable.jsx  SensorSelect.jsx
frontend/src/controls/: DurationPicker.jsx
frontend/src/dashboard/: Dashboard.jsx  SensorLineChart.jsx
frontend/src/history/: GranulationParamSelect.jsx  GranulationSelect.jsx  History.jsx  HistoryMenu.jsx  HistoryPrediction.jsx  HistoryView.jsx  HorizonLine.jsx  PredictionTimeline.jsx
frontend/src/history/__tests__/: PredictionTimeline.test.js
frontend/src/login/: AuthWrapper.jsx  LoginForm.jsx
frontend/src/models/: Calculations.jsx  ComparisonSelection.jsx  ModelComparison.jsx  ModelComparisonCharts.jsx  ModelComparisonLineChart.jsx  ModelSelection.jsx  ScalarMetrics.jsx  ScalarMetricsRadarChart.jsx  ScalarMetricsTable.jsx  SensorSelect.jsx  utils.jsx
frontend/src/monitor/: Monitor.jsx  MonitorView.jsx  SensorGrid.jsx  SensorLineChart.jsx
frontend/src/prediction/: Graph.jsx  PredictionView.jsx  SensorChart.jsx  SensorTabs.jsx  utils.jsx
frontend/src/sensor/: CommonChart.jsx  Graph.jsx
frontend/src/sensors/: CommonChart.jsx  Graph.jsx  SensorChart.jsx  SensorTabs.jsx  utils.jsx
frontend/src/utils/: ArrowSlider.jsx  DataSelect.jsx  Resource.jsx  utils.jsx
mock/: Dockerfile  mock.py  pyproject.toml  qwe.ipynb
realdata/: coincheck.py  finding_nemo.py  pyproject.toml  weather.py
realdata/api-parameter-interface/: package-lock.json  package.json
realdata/api-parameter-interface/public/: index.html
realdata/api-parameter-interface/src/: index.js
