[tool.poetry]
name = "inferred-backend"
version = "0.1.0"
description = ""
authors = ["Rafał Łazicki <rafal.lazicki99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"
isort = "^5.12.0"
autoflake = "^2.2.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
django = "^4.2.5"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.7"
channels = "3.0.5"
channels-redis = "^4.1.0"
django-cors-headers = "^3.14.0"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
celery = "^5.3.4"
invoke = "^2.2.0"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
debugpy = "^1.8.0"
django-filter = "^23.2"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pyparsing = "^3.1.1"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
