[tool.poetry]
name = "mock"
version = "0.1.0"
description = ""
authors = ["Rafał Łazicki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
pandas = "^1.5.3"
requests = "^2.28.2"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
